--- a/app/src/main/res/layout/activity_chat_activity.xml
+++ b/app/src/main/res/layout/activity_chat_activity.xml
@@ -6,23 +6,16 @@
     android:orientation="vertical"
     tools:context="com.google.firebase.codelab.friendlychat.chat_activity"
     android:weightSum="1">
-    <fragment
-        android:id="@+id/fragment"
-        android:name="com.google.firebase.codelab.friendlychat.users_list_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        tools:layout="@layout/fragment_users_list_fragment"
-        android:layout_weight="0.23" />
-    <fragment
-        android:id="@+id/fragment2"
-        android:name="com.google.firebase.codelab.friendlychat.user_chat_rooms"
-        android:layout_width="match_parent"
-        android:layout_height="98dp"
-        tools:layout="@layout/fragment_user_chat_rooms"
-        android:layout_weight="0.87" />
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/pager">
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pager_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp" />
     </android.support.v4.view.ViewPager>
 </LinearLayout>
