--- a/app/src/main/res/layout/fragment_user_chat_rooms.xml
+++ b/app/src/main/res/layout/fragment_user_chat_rooms.xml
@@ -4,13 +4,10 @@
     android:layout_height="match_parent"
     android:background="#9f9f9f"
     tools:context="com.google.firebase.codelab.friendlychat.user_chat_rooms">
-
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:text="@string/hello_blank_fragment" />
     <ListView
         android:layout_width="match_parent"
-        android:background="#2a312a"
+        android:background="#d4dede"
         android:id="@+id/chat_room_list"
         android:layout_height="match_parent">
 
