--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,6 +7,6 @@
         app:showAsAction="never"/>
     <item
         android:id="@+id/chat_rooms"
-        android:title="@string/fresh_config"
+        android:title="PVC"
         app:showAsAction="never"/>
 </menu>
